--- a/responsive.scss
+++ b/responsive.scss
@@ -125,9 +125,10 @@
 
   .nft {
     position: relative;
+    padding-bottom: 12rem;
   }
   .nft_content {
-    margin-top: -10rem;
+    margin-top: -8rem;
     // transform: translateY(-10rem);
   }
 
@@ -156,7 +157,6 @@
 
   .nft_right {
     margin-top: 2rem;
-
     .bone img {
       max-width: 8rem;
       left: -3rem;
@@ -175,7 +175,7 @@
     position: absolute;
     width: 11.5rem;
     right: -1rem;
-    bottom: 4rem;
+    bottom: 3rem;
     transform: rotate(13deg) scale(-1, 1);
   }
 
@@ -187,6 +187,7 @@
 
   // history
   .history {
+    padding: 5rem 0;
     background-image: url(images/history/history_bg_mbl.png);
   }
 
@@ -205,7 +206,7 @@
 
   .frame_dog {
     img {
-      max-width: 18rem;
+      max-width: 17rem;
       width: 100%;
     }
   }
@@ -216,16 +217,20 @@
     top: -4rem;
     width: 4.5rem;
   }
+
+  .utility .thum_img {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 500px) {
   .main {
     .social_icons {
       display: none;
     }
 
     .benji_logo img {
-      width: 18.5rem;
+      width: 22rem;
     }
 
     .bee img {
@@ -269,10 +274,6 @@
     left: -1rem;
     top: -4rem;
     width: 3.5rem;
-  }
-
-  .utility .thum_img {
-    display: none;
   }
 
   .gen2_content p {
