--- a/style.scss
+++ b/style.scss
@@ -154,7 +154,8 @@ section {
   overflow: hidden;
 }
 
-.sm , ul .extra_sm {
+.sm,
+ul .extra_sm {
   display: none;
 }
 
@@ -312,7 +313,7 @@ li {
 
 .nft {
   position: relative;
-  padding: 6rem 0;
+  padding-top: 6rem;
   background-image: url(images/nft_bg.png);
   text-align: center;
   height: 100%;
@@ -386,6 +387,7 @@ li {
   h3 {
     font-size: 3rem;
     margin-top: 8rem;
+    padding-bottom: 2rem;
   }
 
   .cam_dog img {
