--- a/responsive.css
+++ b/responsive.css
@@ -253,4 +253,10 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .main .benji_logo img {
+    width: 18rem;
+  }
+}
 /*# sourceMappingURL=responsive.css.map */
