--- a/style.scss
+++ b/style.scss
@@ -648,6 +648,10 @@ li {
   left: -1rem;
 }
 
+.pink_dog img {
+  width: 100%;
+}
+
 .utility_bottom {
   display: flex;
   justify-content: center;
