--- a/responsive.css
+++ b/responsive.css
@@ -202,6 +202,9 @@
   .utility .thum_img {
     display: none;
   }
+  .gen2_top_text .scretch_img {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -249,14 +252,87 @@
   .gen2_content p {
     font-size: 1.5rem;
   }
-  .gen2_top_text .scretch_img {
-    display: none;
+  .gen2_top_text p {
+    max-width: 100%;
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 460px) {
+  .main {
+    height: 450px;
+  }
+  .main .hero_dog img {
+    width: 10rem;
+  }
   .main .benji_logo img {
     width: 18rem;
+  }
+  .main .bee img {
+    bottom: 12rem;
+    width: 2.2rem;
+  }
+  .main .butter_yellow img {
+    width: 3.5rem;
+  }
+  .main .butter_red img {
+    width: 2.8rem;
+  }
+  .main .butterfly {
+    right: -3.7rem;
+  }
+  .nft .text_header h3 {
+    font-size: 1.9rem;
+  }
+  .team {
+    text-align: center;
+  }
+  .team .member {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100%;
+  }
+  .team .team_members .member:nth-child(even) {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    text-align: center;
+  }
+  .utility_top h2 {
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .team_top h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .main .hero_dog img {
+    width: 9rem;
+  }
+  .main .benji_logo img {
+    width: 15rem;
+  }
+  .main .bee img {
+    left: 1rem;
+  }
+  .nft .text_header h3 {
+    font-size: 1.5rem;
+  }
+  .nft p {
+    font-size: 1.3rem;
+  }
+  .nft .bottom_text_sm h2 {
+    font-size: 1.3rem;
   }
 }
 /*# sourceMappingURL=responsive.css.map */
