--- a/style.css
+++ b/style.css
@@ -724,6 +724,10 @@ li {
   left: -1rem;
 }
 
+.pink_dog img {
+  width: 100%;
+}
+
 .utility_bottom {
   display: -webkit-box;
   display: -ms-flexbox;
