--- a/responsive.scss
+++ b/responsive.scss
@@ -50,7 +50,7 @@
   .love_dog,
   .sorrow_dog,
   .lock_pin,
-  .logo_dog,
+  .text_second .logo_dog,
   .con_with_banner {
     display: none;
   }
@@ -61,6 +61,28 @@
   }
   .gen2_bottom p {
     width: 100%;
+  }
+
+  .team_top {
+    position: relative;
+
+    .butter_red img {
+      display: block;
+      position: absolute;
+      right: -2rem;
+      top: -3rem;
+    }
+  }
+
+  .text_third {
+    position: relative;
+    .logo_dog img {
+      display: block;
+      position: absolute;
+      width: 5rem;
+      right: -8rem;
+      top: -2rem;
+    }
   }
 }
 
@@ -219,6 +241,12 @@
   .utility .thum_img {
     display: none;
   }
+
+  .thum_text p,
+  .thum_text span {
+    font-size: 1.3rem;
+  }
+
   .gen2_top_text .scretch_img {
     display: none;
   }
@@ -236,7 +264,6 @@
 
     .bee img {
       width: 2.5rem;
-      // transform: scaleX(-1);
       left: 4rem;
       bottom: 20rem;
     }
@@ -283,6 +310,9 @@
 
   .gen2_top_text p {
     max-width: 100%;
+  }
+  .logo_dog {
+    display: none;
   }
 }
 
@@ -377,6 +407,41 @@
       h2 {
         font-size: 1.3rem;
       }
+    }
+  }
+
+  .gen2_content p,
+  .gen2_content span {
+    font-size: 1.4rem;
+  }
+
+  .utility_top {
+    h2 {
+      font-size: 1.56rem;
+    }
+  }
+
+  .utility_content {
+    p,
+    span {
+      font-size: 1.3rem;
+    }
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .main {
+    height: 350px;
+    .hero_dog img {
+      width: 8rem;
+    }
+    .benji_logo img {
+      width: 12rem;
+    }
+
+    .bee img {
+      left: 1rem;
+      bottom: 10rem;
     }
   }
 }
