--- a/style.scss
+++ b/style.scss
@@ -536,6 +536,12 @@ li {
   right: -0.8rem;
 }
 
+.team_top {
+  .butter_red img {
+    display: none;
+  }
+}
+
 ////////////////////////////  Utility_Area ////////////////////////////
 .utility {
   padding: 3rem 0 1rem 0;
@@ -638,9 +644,15 @@ li {
   left: -0.5rem;
   top: -0.8rem;
 }
-.text_third img {
-  transform: rotate(-25deg);
-  left: -2.5rem;
+.text_third {
+  .thum_img img {
+    transform: rotate(-25deg);
+    left: -2.5rem;
+  }
+
+  .logo_dog img {
+    display: none;
+  }
 }
 .text_fourth img {
   transform: rotate(10deg);
@@ -776,7 +788,7 @@ p .comma {
 ////////////////////////////  Woof_Area ////////////////////////////
 
 .woof {
-  padding: 10rem 0;
+  padding: 6rem 0;
   background-color: #ebbeb1;
 }
 
