--- a/style.css
+++ b/style.css
@@ -244,13 +244,12 @@ li {
   opacity: 1;
 }
 
-.nav ul li .bold {
+.nav ul li .active {
   opacity: 1;
-  font-weight: 500;
 }
 
 .main {
-  background-image: url(images/main_bg1.png);
+  background-image: url(images/main/main_bg.png);
   height: 650px;
   position: relative;
 }
@@ -335,7 +334,7 @@ li {
 .nft {
   position: relative;
   padding-top: 6rem;
-  background-image: url(images/nft_bg.png);
+  background-image: url(images/nft/nft_bg.png);
   text-align: center;
   height: 100%;
 }
