--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,26 @@
+/*---------------------------------------------------- 
+Screen - 768px
+----------------------------------------------------*/
 @media screen and (max-width: 768px) {
   nav .hamburger {
     display: inline-block;
     font-size: 1.8rem;
     cursor: pointer;
   }
+  .nav_op {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.192);
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+  }
   .nav_right ul {
+    z-index: 9999;
     position: absolute;
     background-color: white;
     -webkit-box-orient: vertical;
@@ -54,7 +70,6 @@
   .love_dog,
   .sorrow_dog,
   .lock_pin,
-  .text_second .logo_dog,
   .con_with_banner {
     display: none;
   }
@@ -77,18 +92,19 @@
     right: -2rem;
     top: -3rem;
   }
-  .text_third {
-    position: relative;
+  .team_members {
+    margin-top: 2rem;
   }
-  .text_third .logo_dog img {
-    display: block;
-    position: absolute;
+  .thum_text .text_second .logo_dog img {
+    right: -2rem;
+    top: 3rem;
     width: 5rem;
-    right: -8rem;
-    top: -2rem;
   }
 }
 
+/*---------------------------------------------------- 
+Screen - 640px
+----------------------------------------------------*/
 @media screen and (max-width: 640px) {
   .lg {
     display: none;
@@ -225,9 +241,6 @@
   .thum_text span {
     font-size: 1.3rem;
   }
-  .gen2_top_text .scretch_img {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 500px) {
@@ -278,12 +291,18 @@
   .gen2_top_text p {
     max-width: 100%;
   }
-  .logo_dog {
+  .thum_text .text_second .logo_dog {
     display: none;
   }
 }
 
+/*---------------------------------------------------- 
+Screen - 460px
+----------------------------------------------------*/
 @media screen and (max-width: 460px) {
+  .nav {
+    padding: 0;
+  }
   .main {
     height: 450px;
   }
@@ -333,8 +352,14 @@
     text-align: center;
     font-size: 1.5rem;
   }
+  .history_left .frame img {
+    width: 1rem;
+  }
 }
 
+/*---------------------------------------------------- 
+Screen - 400px
+----------------------------------------------------*/
 @media screen and (max-width: 400px) {
   .team_top h2 {
     font-size: 1.5rem;
@@ -383,6 +408,9 @@
   }
 }
 
+/*---------------------------------------------------- 
+Screen - 300px
+----------------------------------------------------*/
 @media screen and (max-width: 300px) {
   .main {
     height: 350px;
