--- a/style.css
+++ b/style.css
@@ -66,50 +66,6 @@ button {
   color: var(--white);
 }
 
-.flex-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.flex-column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.flex-justify-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.flex-justify-column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
 .container {
   margin: 0 auto;
   max-width: 1280px;
@@ -154,8 +110,11 @@ ul .extra_sm {
   display: none;
 }
 
+/*---------------------------------------------------- 
+Header Area
+----------------------------------------------------*/
 header {
-  z-index: 999;
+  z-index: 99;
   background-color: white;
   right: 0;
   left: 0;
@@ -248,6 +207,9 @@ li {
   opacity: 1;
 }
 
+/*---------------------------------------------------- 
+Main Area
+----------------------------------------------------*/
 .main {
   background-image: url(images/main/main_bg.png);
   height: 650px;
@@ -331,6 +293,9 @@ li {
   display: none;
 }
 
+/*---------------------------------------------------- 
+NFT Area
+----------------------------------------------------*/
 .nft {
   position: relative;
   padding-top: 6rem;
@@ -431,6 +396,9 @@ li {
           transform: rotate(-13deg);
 }
 
+/*---------------------------------------------------- 
+History Area
+----------------------------------------------------*/
 .history {
   padding: 6rem 0 10rem 0;
   background-image: url(images/history/history_bg1.png);
@@ -488,6 +456,9 @@ li {
   margin-top: 1rem;
 }
 
+/*---------------------------------------------------- 
+Team Area
+----------------------------------------------------*/
 .team {
   background-image: url(images/team/team_bg.png);
   padding: 5rem 0;
@@ -583,10 +554,18 @@ li {
   right: -0.8rem;
 }
 
+.team_top h2 {
+  color: #202020;
+  font-size: 2.5rem;
+}
+
 .team_top .butter_red img {
   display: none;
 }
 
+/*---------------------------------------------------- 
+Utility Area
+----------------------------------------------------*/
 .utility {
   padding: 3rem 0 1rem 0;
   background-image: url(images/utility/utility_bg.png);
@@ -622,8 +601,8 @@ li {
 
 .sorrow_dog img {
   position: absolute;
-  left: -2rem;
-  top: -1rem;
+  left: -11rem;
+  top: -0.5rem;
 }
 
 .utility_top {
@@ -720,15 +699,11 @@ li {
   left: -2.5rem;
 }
 
-.text_third .logo_dog img {
-  display: none;
-}
-
 .text_fourth img {
-  -webkit-transform: rotate(10deg);
-          transform: rotate(10deg);
-  top: 1rem;
-  left: -1rem;
+  -webkit-transform: rotate(5deg);
+          transform: rotate(5deg);
+  top: -1rem;
+  left: 8.5rem;
 }
 
 .pink_dog img {
@@ -757,6 +732,9 @@ li {
   font-size: 1.7rem;
 }
 
+/*---------------------------------------------------- 
+Gen2 Area
+----------------------------------------------------*/
 .gen2 {
   padding-bottom: 4rem;
   background-image: url(images/gen2/gen2_bg.png);
@@ -802,12 +780,6 @@ li {
   position: relative;
 }
 
-.gen2_top_text .scretch_img {
-  position: absolute;
-  left: 20rem;
-  bottom: -1rem;
-}
-
 .clapboard img {
   margin-top: 1rem;
   width: 10rem;
@@ -851,6 +823,7 @@ li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0 5rem;
 }
 
 .dog_banner {
@@ -893,6 +866,9 @@ p .comma {
   font-family: "Special Elite";
 }
 
+/*---------------------------------------------------- 
+Woof Area
+----------------------------------------------------*/
 .woof {
   padding: 6rem 0;
   background-color: #ebbeb1;
@@ -933,6 +909,9 @@ p .comma {
   width: 4rem;
 }
 
+/*-----
+Sticky nav
+---*/
 .sticky {
   position: fixed;
 }
