--- a/style.scss
+++ b/style.scss
@@ -654,13 +654,14 @@ Gen2 Area
   span {
     font-family: "blueberry";
     color: var(--text_clr_main);
-    font-size: 1.9rem;
-    line-height: 1.3;
+    font-size: 1.75rem;
+    line-height: 1.5;
+    text-align: center;
   }
+}
 
-  p,
-  s {
-  }
+.gen2_content {
+  padding: 0 2.5rem;
 }
 
 .gen2_top {
@@ -669,10 +670,6 @@ Gen2 Area
   flex-direction: column;
   text-align: center;
 
-  p {
-    max-width: calc(100% - 5rem);
-    margin: 0 auto;
-  }
   span {
     color: var(--text_clr_red);
   }
@@ -695,10 +692,8 @@ Gen2 Area
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 2rem;
 
   p {
-    font-size: 1.5rem;
     width: 83%;
   }
 }
@@ -709,34 +704,34 @@ Gen2 Area
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 5rem;
+  gap: 2rem;
 }
 
 .dog_banner {
   position: absolute;
   img {
-    width: 8rem;
+    width: 7.5rem;
   }
 }
 
 .dog_banner_first {
   top: 3rem;
-  left: -2rem;
+  left: -4.5rem;
 }
 
 .dog_banner_third {
   top: -0.5rem;
-  right: -2rem;
+  right: -4.5rem;
 }
 
 .dog_banner_second {
-  top: 1rem;
-  left: -14rem;
+  top: 20rem;
+  left: -4.5rem;
 }
 
 .dog_banner_fourth {
-  top: -0.5rem;
-  right: -14rem;
+  top: 20.5rem;
+  right: -4rem;
 }
 
 p .light_clr {
