--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,16 @@
+@media screen and (max-width: 1024px) {
+  .gen2 {
+    text-align: center;
+  }
+  .gen2 p {
+    max-width: calc(100% - 5rem);
+    margin: 0 auto;
+  }
+  .dog_banner img {
+    width: 6rem;
+  }
+}
+
 /*---------------------------------------------------- 
 Screen - 768px
 ----------------------------------------------------*/
@@ -69,8 +82,7 @@ Screen - 768px
   }
   .love_dog,
   .sorrow_dog,
-  .lock_pin,
-  .con_with_banner {
+  .lock_pin {
     display: none;
   }
   .social_icons {
@@ -240,6 +252,16 @@ Screen - 640px
   .thum_text p,
   .thum_text span {
     font-size: 1.3rem;
+  }
+  .gen2 p {
+    max-width: 100%;
+    margin: 0;
+  }
+  .gen2 .banners {
+    display: none;
+  }
+  .gen2 .gen2_content {
+    padding: 0 1rem;
   }
 }
 
