--- a/responsive.scss
+++ b/responsive.scss
@@ -1,6 +1,19 @@
 @media screen and (max-width: 1280px) {
 }
 @media screen and (max-width: 1024px) {
+  .gen2 {
+    text-align: center;
+    p {
+      max-width: calc(100% - 5rem);
+      margin: 0 auto;
+    }
+  }
+
+  .dog_banner {
+    img {
+      width: 6rem;
+    }
+  }
 }
 
 /*---------------------------------------------------- 
@@ -66,8 +79,7 @@ Screen - 768px
   }
   .love_dog,
   .sorrow_dog,
-  .lock_pin,
-  .con_with_banner {
+  .lock_pin {
     display: none;
   }
 
@@ -263,6 +275,21 @@ Screen - 640px
   .thum_text p,
   .thum_text span {
     font-size: 1.3rem;
+  }
+
+  .gen2 {
+    p {
+      max-width: 100%;
+      margin: 0;
+    }
+
+    .banners {
+      display: none;
+    }
+
+    .gen2_content {
+      padding: 0 1rem;
+    }
   }
 }
 
