--- a/responsive.scss
+++ b/responsive.scss
@@ -496,6 +496,10 @@ Screen - 400px
         font-size: 1.3rem;
       }
     }
+
+    .nft_content {
+      margin-top: -7.42rem;
+    }
   }
 
   .gen2_content p,
