--- a/responsive.scss
+++ b/responsive.scss
@@ -122,9 +122,9 @@ Screen - 640px
   }
 
   .sm {
-    display: block;
+    display: inline-block;
   }
-  section {
+  .nft {
     overflow: visible;
   }
 
@@ -218,6 +218,7 @@ Screen - 640px
     }
   }
   .bottom_text_sm {
+    position: relative;
     margin: 0 auto;
     margin-top: 3rem;
     width: 90%;
@@ -225,10 +226,10 @@ Screen - 640px
 
   .nft .cam_dog_sm img {
     position: absolute;
-    width: 11.5rem;
-    right: -1rem;
+    width: 9rem;
+    right: 1rem;
     bottom: 3rem;
-    transform: rotate(13deg) scale(-1, 1);
+    transform: scale(-1, 1);
   }
 
   .nft_bottom {
@@ -492,6 +493,7 @@ Screen - 400px
     }
 
     .bottom_text_sm {
+      position: relative;
       h2 {
         font-size: 1.3rem;
       }
