--- a/style.css
+++ b/style.css
@@ -69,8 +69,10 @@ button {
 .container {
   margin: 0 auto;
   max-width: 1280px;
+  width: 100%;
   border-radius: 5px;
   padding: 0 2rem;
+  text-align: center;
 }
 
 body {
@@ -103,6 +105,7 @@ section {
   background-position: top center;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .sm,
@@ -300,8 +303,8 @@ NFT Area
   position: relative;
   padding-top: 6rem;
   background-image: url(images/nft/nft_bg.png);
-  text-align: center;
   height: 100%;
+  width: 100%;
 }
 
 .nft .nft_top {
@@ -389,11 +392,9 @@ NFT Area
 
 .nft_bottom .cam_dog img {
   position: absolute;
-  width: 14rem;
-  left: 0rem;
-  bottom: 1.4rem;
-  -webkit-transform: rotate(-13deg);
-          transform: rotate(-13deg);
+  width: 10.5rem;
+  left: 3rem;
+  bottom: 3.4rem;
 }
 
 /*---------------------------------------------------- 
@@ -415,7 +416,6 @@ History Area
       -ms-flex-align: center;
           align-items: center;
   gap: 4rem;
-  text-align: center;
 }
 
 .history_content h3 {
@@ -535,10 +535,6 @@ Team Area
   margin-top: 1rem;
 }
 
-.only_one_p p {
-  margin-top: 10rem;
-}
-
 .team_members .member:nth-child(even) {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
@@ -578,7 +574,6 @@ Utility Area
 .utility p,
 .utility span {
   color: var(--text_clr_main);
-  text-align: center;
   line-height: 1.5;
 }
 
@@ -751,7 +746,6 @@ Gen2 Area
   color: var(--text_clr_main);
   font-size: 1.75rem;
   line-height: 1.5;
-  text-align: center;
 }
 
 .gen2_content {
@@ -769,7 +763,6 @@ Gen2 Area
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: center;
 }
 
 .gen2_top span {
@@ -803,7 +796,6 @@ Gen2 Area
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
 }
 
 .gen2_bottom p {
