--- a/style.scss
+++ b/style.scss
@@ -467,13 +467,20 @@ Team Area
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   width: 100%;
-  justify-content: space-around;
   justify-items: center;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
 }
 
 .member {
   display: flex;
   gap: 1rem;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+
 
   a {
     font-size: 1.3rem;
@@ -490,6 +497,9 @@ Team Area
   p:last-child {
     margin-top: 1rem;
   }
+}
+.team_members .member:nth-child(odd) {
+  text-align: left;
 }
 
 .team_members .member:nth-child(even) {
