--- a/style.css
+++ b/style.css
@@ -506,15 +506,9 @@ Team Area
       grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   width: 100%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .member {
@@ -522,15 +516,6 @@ Team Area
   display: -ms-flexbox;
   display: flex;
   gap: 1rem;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .member a {
@@ -550,8 +535,8 @@ Team Area
   margin-top: 1rem;
 }
 
-.team_members .member:nth-child(odd) {
-  text-align: left;
+.without_margin p:last-child {
+  margin-top: 0;
 }
 
 .team_members .member:nth-child(even) {
@@ -559,7 +544,11 @@ Team Area
   -webkit-box-direction: reverse;
       -ms-flex-flow: row-reverse;
           flex-flow: row-reverse;
-  text-align: end;
+  text-align: right;
+}
+
+.team_members .member:nth-child(odd) {
+  text-align: left;
 }
 
 .member_img {
