--- a/responsive.css
+++ b/responsive.css
@@ -9,6 +9,15 @@
   .dog_banner img {
     width: 6rem;
   }
+  .history {
+    padding-top: 3.5rem;
+    padding-bottom: 6rem;
+  }
+  .history .frame img {
+    top: -1rem;
+    left: -4rem;
+    width: 4.5rem;
+  }
 }
 
 /*---------------------------------------------------- 
@@ -95,6 +104,9 @@ Screen - 768px
   .gen2_bottom p {
     width: 100%;
   }
+  .team {
+    padding: 3rem 0;
+  }
   .team_top {
     position: relative;
   }
@@ -102,7 +114,8 @@ Screen - 768px
     display: block;
     position: absolute;
     right: -2rem;
-    top: -3rem;
+    top: -2.8rem;
+    width: 3rem;
   }
   .team_members {
     margin-top: 2rem;
@@ -111,6 +124,11 @@ Screen - 768px
     right: -2rem;
     top: 3rem;
     width: 5rem;
+  }
+  .nft_bottom .cam_dog img {
+    width: 8.5rem;
+    left: 0;
+    bottom: 4.4rem;
   }
 }
 
@@ -223,14 +241,19 @@ Screen - 640px
     position: static;
   }
   .history {
-    padding: 5rem 0;
+    padding: 3.5rem 0;
     background-image: url(images/history/history_bg_mbl.png);
+  }
+  .history .frame img {
+    top: -1rem;
+    left: -5rem;
+    width: 5rem;
   }
   .frame_sm img {
     position: absolute;
     bottom: -1rem;
-    right: -6rem;
-    width: 6rem;
+    right: -5rem;
+    width: 5rem;
     -webkit-transform: rotate(-25deg);
             transform: rotate(-25deg);
   }
@@ -317,6 +340,9 @@ Screen - 640px
   .thum_text .text_second .logo_dog {
     display: none;
   }
+  .history {
+    padding-bottom: 2.5rem;
+  }
 }
 
 /*---------------------------------------------------- 
@@ -364,7 +390,7 @@ Screen - 460px
             flex-direction: column;
     width: 100%;
   }
-  .team .team_members .member:nth-child(even) {
+  .team .team_members .member {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-flow: column;
@@ -376,14 +402,14 @@ Screen - 460px
     font-size: 1.5rem;
   }
   .history_left .frame img {
-    left: -5rem;
+    left: -4rem;
   }
   .history_left img {
     right: -4rem;
   }
   .history_left .frame img,
   .frame_sm img {
-    width: 4rem;
+    width: 4.5rem;
   }
 }
 
@@ -394,8 +420,16 @@ Screen - 400px
   .team_top h2 {
     font-size: 1.5rem;
   }
+  .team {
+    padding: 2.5rem 0;
+  }
+  .history {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+  }
   .history_left .frame img {
     left: -3rem;
+    top: 0.7rem;
     -webkit-transform: rotate(-30deg);
             transform: rotate(-30deg);
   }
@@ -405,6 +439,9 @@ Screen - 400px
   .history_left .frame img,
   .frame_sm img {
     width: 3.2rem;
+  }
+  .history_right p {
+    margin-top: 0;
   }
 }
 
@@ -442,6 +479,11 @@ Screen - 400px
   }
   .nft .nft_content {
     margin-top: -7.42rem;
+  }
+  .flower_gif_sm img {
+    left: -1rem;
+    top: -2rem;
+    width: 2.5rem;
   }
   .gen2_content p,
   .gen2_content span {
