--- a/responsive.scss
+++ b/responsive.scss
@@ -14,6 +14,17 @@
       width: 6rem;
     }
   }
+
+  .history {
+    padding-top: 3.5rem;
+    padding-bottom: 6rem;
+
+    .frame img {
+      top: -1rem;
+      left: -4rem;
+      width: 4.5rem;
+    }
+  }
 }
 
 /*---------------------------------------------------- 
@@ -91,14 +102,17 @@ Screen - 768px
     width: 100%;
   }
 
+  .team {
+    padding: 3rem 0;
+}
   .team_top {
     position: relative;
-
     .butter_red img {
       display: block;
       position: absolute;
       right: -2rem;
-      top: -3rem;
+      top: -2.8rem;
+      width: 3rem;
     }
   }
 
@@ -110,6 +124,12 @@ Screen - 768px
     right: -2rem;
     top: 3rem;
     width: 5rem;
+  }
+
+  .nft_bottom .cam_dog img {
+    width: 8.5rem;
+    left: 0;
+    bottom: 4.4rem;
   }
 }
 
@@ -238,16 +258,24 @@ Screen - 640px
 
   // history
   .history {
-    padding: 5rem 0;
+    padding: 3.5rem 0;
     background-image: url(images/history/history_bg_mbl.png);
+  }
+
+    .history {
+    .frame img {
+      top: -1rem;
+      left: -5rem;
+      width: 5rem;
+    }
   }
 
   .frame_sm {
     img {
       position: absolute;
       bottom: -1rem;
-      right: -6rem;
-      width: 6rem;
+      right: -5rem;
+      width: 5rem;
       transform: rotate(-25deg);
     }
   }
@@ -356,6 +384,10 @@ Screen - 640px
   .thum_text .text_second .logo_dog {
     display: none;
   }
+
+  .history {
+    padding-bottom: 2.5rem;
+  }
 }
 
 /*---------------------------------------------------- 
@@ -406,7 +438,7 @@ Screen - 460px
     }
 
     text-align: center;
-    .team_members .member:nth-child(even) {
+    .team_members .member {
       flex-flow: column;
       text-align: center;
     }
@@ -420,7 +452,7 @@ Screen - 460px
   }
 
   .history_left .frame img {
-    left: -5rem;
+    left: -4rem;
   }
   .history_left img {
     right: -4rem;
@@ -428,22 +460,29 @@ Screen - 460px
 
   .history_left .frame img,
   .frame_sm img {
-    width: 4rem;
+    width: 4.5rem;
   }
 }
 /*---------------------------------------------------- 
 Screen - 400px
 ----------------------------------------------------*/
-
 @media screen and (max-width: 400px) {
   .team_top {
     h2 {
       font-size: 1.5rem;
     }
   }
-
+    .team {
+    padding: 2.5rem 0;
+  }
+  
+  .history {
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+  }
   .history_left .frame img {
     left: -3rem;
+    top: 0.7rem;
     transform: rotate(-30deg);
   }
   .history_left img {
@@ -454,6 +493,10 @@ Screen - 400px
   .frame_sm img {
     width: 3.2rem;
   }
+
+  .history_right p {
+    margin-top: 0;
+}
 }
 
 @media screen and (max-width: 360px) {
@@ -503,6 +546,12 @@ Screen - 400px
       margin-top: -7.42rem;
     }
   }
+
+  .flower_gif_sm img {
+    left: -1rem;
+    top: -2rem;
+    width: 2.5rem;
+}
 
   .gen2_content p,
   .gen2_content span {
