--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 @font-face {
   font-family: "Blueberry";
-  src: url(fonts/Blueberry.ttf) format("truetype");
+  src: url(fonts/Blueberry.otf) format("truetype");
   letter-spacing: 2px;
 }
 
