--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,7 @@
 ///
 @font-face {
   font-family: "Blueberry";
-  src: url(fonts/Blueberry.ttf) format("truetype");
+  src: url(fonts/Blueberry.otf) format("truetype");
   letter-spacing: 2px;
 }
 
