--- a/responsive.scss
+++ b/responsive.scss
@@ -1,6 +1,11 @@
 @media screen and (max-width: 1280px) {
 }
 @media screen and (max-width: 1024px) {
+  .nft_right .bone img {
+    width: 8.3rem;
+    right: -3rem;
+    bottom: -2.6rem;
+  }
   .gen2 {
     text-align: center;
     p {
@@ -104,7 +109,7 @@ Screen - 768px
 
   .team {
     padding: 3rem 0;
-}
+  }
   .team_top {
     position: relative;
     .butter_red img {
@@ -124,6 +129,13 @@ Screen - 768px
     right: -2rem;
     top: 3rem;
     width: 5rem;
+  }
+
+  .nft_right .bone img {
+    width: 8.3rem;
+    right: -3rem;
+    bottom: -2.5rem;
+    transform: rotate(-5deg);
   }
 
   .nft_bottom .cam_dog img {
@@ -232,7 +244,7 @@ Screen - 640px
     .bone img {
       max-width: 8rem;
       left: -3rem;
-      bottom: -1.2rem;
+      bottom: -2.2rem;
       transform: rotate(40deg);
       width: 100%;
     }
@@ -262,7 +274,7 @@ Screen - 640px
     background-image: url(images/history/history_bg_mbl.png);
   }
 
-    .history {
+  .history {
     .frame img {
       top: -1rem;
       left: -5rem;
@@ -472,10 +484,10 @@ Screen - 400px
       font-size: 1.5rem;
     }
   }
-    .team {
+  .team {
     padding: 2.5rem 0;
   }
-  
+
   .history {
     padding-top: 1rem;
     padding-bottom: 3rem;
@@ -496,7 +508,7 @@ Screen - 400px
 
   .history_right p {
     margin-top: 0;
-}
+  }
 }
 
 @media screen and (max-width: 360px) {
@@ -551,7 +563,7 @@ Screen - 400px
     left: -1rem;
     top: -2rem;
     width: 2.5rem;
-}
+  }
 
   .gen2_content p,
   .gen2_content span {
