--- a/style.css
+++ b/style.css
@@ -527,7 +527,8 @@ Team Area
 }
 
 .member_info {
-  max-width: 23rem;
+  font-size: 1.4rem;
+  max-width: 24rem;
   width: 100%;
 }
 
@@ -536,7 +537,7 @@ Team Area
 }
 
 .without_margin p:last-child {
-  margin-top: 0;
+  margin-top: 0.4rem;
 }
 
 .team_members .member:nth-child(even) {
