--- a/responsive.scss
+++ b/responsive.scss
@@ -20,6 +20,11 @@
     }
   }
 
+    .team_members {
+    grid-template-columns: 1fr;
+    gap: 3rem;
+  }
+
   .history {
     padding-top: 3.5rem;
     padding-bottom: 6rem;
@@ -41,17 +46,8 @@ Screen - 768px
     font-size: 1.8rem;
     cursor: pointer;
   }
-
-  .nav_op {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.192);
-    transition: 0.5s ease-in-out;
+  .overly.bg {
+    display: block;
   }
 
   .nav_right ul {
@@ -89,10 +85,7 @@ Screen - 768px
     flex-direction: column;
   }
 
-  .team_members {
-    grid-template-columns: 1fr;
-    gap: 3rem;
-  }
+
   .love_dog,
   .sorrow_dog,
   .lock_pin {
