--- a/style.scss
+++ b/style.scss
@@ -803,13 +803,13 @@ Sticky nav
   position: fixed;
 }
 
-
 /*-----
 overly nav
 ---*/
 
-.nav_links.bg {
-    background-color: #0f172a46;
+.overly.bg {
+  display: none;
+  background-color: #0f172a46;
   position: absolute;
   height: 100vh;
   width: 100vw;
